# exercism

./: .gitignore
c/leap/: leap.c
cpp/: .gitignore
cpp/ellens-alien-game/: ellens_alien_game.cpp
cpp/freelancer-rates/: freelancer_rates.cpp
cpp/interest-is-interesting/: interest_is_interesting.cpp
cpp/lasagna/: lasagna.cpp
cpp/last-will/: last_will.cpp
cpp/log-levels/: log_levels.cpp
cpp/making-the-grade/: making_the_grade.cpp
cpp/pacman-rules/: pacman_rules.cpp
cpp/reverse-string/: reverse_string.cpp  reverse_string.h
cpp/troll-the-trolls/: troll_the_trolls.cpp
cpp/vehicle-purchase/: vehicle_purchase.cpp  vehicle_purchase.h
go/: go.work
go/acronym/: acronym.go
go/allergies/: allergies.go
go/bob/: bob.go
rust/: Cargo.toml
rust/allergies/src/: lib.rs
rust/armstrong-numbers/src/: lib.rs
rust/beer-song/src/: lib.rs
rust/bob/src/: lib.rs
rust/bottle-song/src/: lib.rs
rust/collatz-conjecture/src/: lib.rs
rust/diffie-hellman/: Cargo.toml
rust/diffie-hellman/src/: lib.rs
rust/eliuds-eggs/src/: lib.rs
rust/gigasecond/src/: lib.rs
rust/grains/src/: lib.rs
rust/high-scores/src/: lib.rs
rust/kindergarten-garden/src/: lib.rs
rust/luhn/src/: lib.rs
rust/matching-brackets/src/: lib.rs
rust/nth-prime/src/: lib.rs
rust/nucleotide-count/src/: lib.rs
rust/prime-factors/src/: lib.rs
rust/proverb/src/: lib.rs
rust/raindrops/src/: lib.rs
rust/raindrops/tests/: raindrops.rs
rust/rna-transcription/src/: lib.rs
rust/series/src/: lib.rs
rust/space-age/src/: lib.rs
rust/sum-of-multiples/src/: lib.rs
(+77 files in other folders)
