[workspace]
members = [
    "allergies",
    "armstrong-numbers",
    "beer-song",
    "bottle-song",
    "bob",
    "circular-buffer",
    "collatz-conjecture",
    "difference-of-squares",
    "diffie-hellman",
    "eliuds-eggs",
    "gigasecond",
    "grains",
    "hello-world",
    "high-scores",
    "kindergarten-garden",
    "leap",
    "luhn",
    "matching-brackets",
    "nth-prime",
    "nucleotide-count",
    "prime-factors",
    "proverb",
    "raindrops",
    "reverse-string",
    "rna-transcription",
    "series",
    "space-age",
    "sum-of-multiples"
]
resolver = "2"

[workspace.package]
edition = "2021"
publish = false
